--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,8 @@
 {% seo %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#0000FF">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<!--     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}"> -->
   </head>
   <body>
 
